--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,10 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Home"></activity>
-        <activity android:name=".DangKi" />
-        <activity android:name=".DangNhap" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".activiti.Home"></activity>
+        <activity android:name=".activiti.DangKi" />
+        <activity android:name=".activiti.DangNhap" />
+        <activity android:name=".activiti.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
