--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.firebaseui:firebase-ui-database:1.2.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.volley:volley:1.1.1'
 }
