--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="vn.edu.stu.doanchuyennganh">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -18,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".activiti.DangKi"></activity>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -29,11 +28,11 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAfB7E7Lsz_KPRFpVnFkqTmiigjdjfaKHc" />
+            android:value="@string/map_api_key" />
 
         <activity
             android:name=".activiti.ThongTinActivity"
-            android:label="@string/title_activity_thong_tin"></activity>
+            android:label="@string/title_activity_thong_tin" />
         <activity android:name=".activiti.ThongTinKhachHang" />
         <activity android:name=".activiti.GioHang" />
         <activity android:name=".activiti.ChiTietSanPham" />
@@ -43,7 +42,6 @@
         <activity android:name=".activiti.BanhActivity" />
         <activity android:name=".activiti.ComActivity" />
         <activity android:name=".activiti.Home" />
-        <activity android:name=".activiti.DangKi" />
         <activity android:name=".activiti.DangNhap" />
         <activity android:name=".activiti.MainActivity">
             <intent-filter>
